# FYS5429

./: .gitignore  README.md
code/: main.ipynb  main.py  main_ml.py  main_pinn.py  pyproject.toml  wave_animation.py
code/data/1d_const/adam/: GeLU_L2_N128.csv  GeLU_L2_N32.csv  GeLU_L2_N64.csv  GeLU_L3_N128.csv  GeLU_L3_N32.csv  GeLU_L3_N64.csv  GeLU_L4_N128.csv  GeLU_L4_N32.csv  GeLU_L4_N64.csv  ReLU_L2_N128.csv  ReLU_L2_N32.csv  ReLU_L2_N64.csv  (+33 more)
code/data/1d_const_losses/: GeLU.csv  SiLU.csv  sine.csv  softmax.csv  tanh.csv
code/data/1d_constant/: sine_L1_N32.csv  sine_L1_N64.csv  sine_L2_N32.csv  sine_L2_N64.csv  tanh_L1_N32.csv  tanh_L1_N64.csv  tanh_L2_N32.csv  tanh_L2_N64.csv
code/data/1d_var/: losses.csv  solution.csv
code/data/2d_const/: GeLU_L3_N128.csv  GeLU_L3_N256.csv  GeLU_L3_N64.csv  GeLU_L4_N128.csv  GeLU_L4_N256.csv  GeLU_L4_N64.csv  GeLU_L5_N128.csv  GeLU_L5_N256.csv  GeLU_L5_N64.csv  SiLU_L3_N128.csv  SiLU_L3_N256.csv  SiLU_L3_N64.csv  SiLU_L4_N128.csv  SiLU_L4_N256.csv  SiLU_L4_N64.csv  SiLU_L5_N128.csv  SiLU_L5_N256.csv  SiLU_L5_N64.csv  tanh_L3_N128.csv  tanh_L3_N256.csv  tanh_L3_N64.csv  tanh_L4_N128.csv  tanh_L4_N256.csv  tanh_L4_N64.csv  tanh_L5_N128.csv  tanh_L5_N256.csv  tanh_L5_N64.csv
code/main/: 1d_const_losses.py  FEM.py  exact_solution.py  main.ipynb  main_fd.py  main_pinn.py  main_pinn_1d.py  pinn_1d_const.py  pinn_1d_var.py  pinn_2d_const.py  pinn_2d_var.py  schemes_1d_const.py  schemes_1d_var.py  schemes_2d_const.py  schemes_2d_var.py  schemes_var.py
code/src/: experiment.py  loss.py  pde.py  pinn.py  plotting.py  utils.py
(+236 files in other folders)
