[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.3",
    "jax>=0.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.3",
]
